--- a/certificate.html
+++ b/certificate.html
@@ -53,7 +53,7 @@
     .footer { display: flex; justify-content: space-between; }
     .footer .stamp {
       width: 100pt; height: 100pt;
-      background: url('data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD...') center center no-repeat;
+      background: url('https://yanhuolink.github.io/file.jpg') center center no-repeat;
       background-size: contain;
     }
     .note { font-size: 10pt; font-style: italic; text-align: center; line-height: 12pt; }
@@ -69,7 +69,7 @@
       <div contenteditable="true" style="text-align: right;">Hope Andrade<br>Secretary of State</div>
     </div>
     <div class="seal">
-      <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..." alt="Seal">
+      <img src="https://yanhuolink.github.io/file.jpg" alt="Seal">
     </div>
     <div class="section-title">
       <div class="title-main" contenteditable="true">Office of the Secretary of State</div>
