--- a/certificate.html
+++ b/certificate.html
@@ -8,89 +8,107 @@
     body {
       margin: 0;
       padding: 30px;
-      background: #eee;
+      background: #f1f1f1;
       font-family: "Times New Roman", serif;
     }
+
     #capture {
       width: 816pt;
       margin: auto;
-      padding: 60pt 70pt;
+      padding: 72pt;
       background: white;
       box-sizing: border-box;
+      position: relative;
     }
+
     [contenteditable="true"] {
       outline: none;
     }
+
     .header {
       display: flex;
       justify-content: space-between;
       font-size: 12pt;
-      line-height: 14pt;
+      line-height: 16pt;
     }
-    .seal img {
-      display: block;
-      margin: 30pt auto 10pt;
+
+    .logo {
+      text-align: center;
+      margin-top: 30pt;
+    }
+
+    .logo img {
       width: 80pt;
       height: 80pt;
     }
+
     .section-title {
       text-align: center;
-      margin: 20pt 0 0;
+      margin-top: 20pt;
+    }
+
+    .section-title .line1 {
+      font-size: 14pt;
       font-weight: bold;
     }
-    .section-title .title-main {
-      font-size: 16pt;
-    }
-    .section-title .title-sub {
-      font-size: 14pt;
+
+    .section-title .line2 {
+      font-size: 13pt;
+      font-weight: bold;
       text-transform: uppercase;
       margin-top: 10pt;
     }
-    .section-title .title-sub2 {
-      font-size: 12pt;
-      text-transform: uppercase;
-      margin-top: 5pt;
-      font-weight: normal;
+
+    .section-title .line3 {
+      font-size: 11pt;
+      margin-top: 10pt;
     }
-    .company-info {
-      text-align: center;
-      margin-top: 12pt;
-    }
-    .company-info .name {
-      font-size: 16pt;
+
+    .section-title .line4 {
+      font-size: 15pt;
       font-weight: bold;
+      margin-top: 10pt;
     }
-    .company-info .id {
-      font-size: 14pt;
+
+    .section-title .line5 {
+      font-size: 13pt;
       margin-top: 4pt;
     }
+
     .content {
       font-size: 12pt;
       line-height: 18pt;
       text-align: justify;
       margin-top: 40pt;
     }
+
     .dates {
       font-size: 12pt;
-      line-height: 16pt;
-      margin-top: 40pt;
+      line-height: 18pt;
+      margin-top: 30pt;
     }
+
     .footer {
       display: flex;
       justify-content: space-between;
       margin-top: 60pt;
     }
-    .footer .stamp {
+
+    .stamp {
       width: 100pt;
       height: 100pt;
-      background: url('data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD...') center center no-repeat;
+      background-image: url('https://raw.githubusercontent.com/YANHUOLINK/yanhuolink.github.io/refs/heads/main/file.jpg');
       background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
     }
-    .footer .sign {
+
+    .sign {
       font-size: 12pt;
       text-align: right;
-      line-height: 14pt;
+      line-height: 16pt;
     }
+
     .note {
       font-size: 10pt;
       font-style: italic;
@@ -98,10 +116,12 @@
       margin-top: 50pt;
       line-height: 12pt;
     }
+
     .note a {
       color: black;
       text-decoration: none;
     }
+
     .contact {
       display: flex;
       justify-content: space-between;
@@ -109,10 +129,12 @@
       line-height: 12pt;
       margin-top: 20pt;
     }
+
     .btn-download {
       text-align: center;
       margin-top: 30px;
     }
+
     button {
       padding: 10px 20px;
       font-size: 14pt;
@@ -135,19 +157,16 @@
     </div>
   </div>
 
-  <div class="seal">
-    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD..." alt="Seal">
+  <div class="logo">
+    <img src="https://raw.githubusercontent.com/YANHUOLINK/yanhuolink.github.io/refs/heads/main/file.jpg" alt="Texas Seal">
   </div>
 
   <div class="section-title">
-    <div class="title-main" contenteditable="true">Office of the Secretary of State</div>
-    <div class="title-sub" contenteditable="true">Certificate of Filing</div>
-    <div class="title-sub2" contenteditable="true">Of</div>
-  </div>
-
-  <div class="company-info">
-    <div class="name" contenteditable="true">B.O.C HOLDINGS LLC.</div>
-    <div class="id" contenteditable="true">802585679</div>
+    <div class="line1" contenteditable="true">Office of the Secretary of State</div>
+    <div class="line2" contenteditable="true">CERTIFICATE OF FILING</div>
+    <div class="line3" contenteditable="true">OF</div>
+    <div class="line4" contenteditable="true">B.O.C HOLDINGS LLC.</div>
+    <div class="line5" contenteditable="true">802585679</div>
   </div>
 
   <div class="content" contenteditable="true">
