--- a/certificate.html
+++ b/certificate.html
@@ -34,7 +34,7 @@
 
     .logo {
       text-align: center;
-      margin-top: 30pt;
+      margin-top: -44pt;
     }
 
     .logo img {
@@ -44,7 +44,7 @@
 
     .section-title {
       text-align: center;
-      margin-top: 20pt;
+      margin-top: 10pt;
     }
 
     .section-title .line1 {
@@ -56,12 +56,13 @@
       font-size: 13pt;
       font-weight: bold;
       text-transform: uppercase;
-      margin-top: 10pt;
+      margin-top: 40pt;
     }
 
     .section-title .line3 {
-      font-size: 11pt;
+      font-size: 0pt;
       margin-top: 10pt;
+      font-weight:bold
     }
 
     .section-title .line4 {
@@ -109,7 +110,7 @@
     }
 
     .note {
-      font-size: 10pt;
+      font-size: 3pt;
       font-style: italic;
       text-align: center;
       margin-top: 50pt;
